# barnacle-search

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.ps1  setup.sh
src/code_indexer/: constants.py  server.py
src/code_indexer/embeddings/: ollama_client.py  vector_store.py
src/code_indexer/indexing/: deep_index.py  index_builder.py  shallow_index.py  snapshot_store.py  sqlite_store.py
src/code_indexer/indexing/strategies/: base.py  build_dart_grammar.py  csharp.py  dart.py  factory.py  html.py  javascript.py  python.py  typescript.py
src/code_indexer/models/: file_info.py  symbol_info.py
src/code_indexer/search/: grep_search.py
src/code_indexer/watcher/: file_watcher.py
tests/: test_deep_index.py  test_file_watcher.py  test_index_builder.py  test_parsing_strategies.py  test_server.py  test_shallow_index.py  test_sqlite_store.py  test_vector_store.py
