[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barnacle-search"
version = "0.1.0"
description = "MCP server for semantic code search using tree-sitter and Ollama embeddings"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-html>=0.23.0",
    "watchdog>=4.0.0",
    "httpx>=0.27.0",
    "pathspec>=0.12.1",
    "tree-sitter-python>=0.25.0",
]

[project.scripts]
barnacle-search = "code_indexer.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_indexer"]
